--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Socket Server</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstra‌​p.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
 </head>
 <body class="container">
 
     <h1 class="mt-5">Acceso denegado</h1>
     <hr>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.js" integrity="sha512-vGcPDqyonHb0c11UofnOKdSAt5zYRpKI4ow+v6hat4i96b7nHSn8PQyk0sT5L9RECyksp+SztCPP6bqeeGaRKg==" crossorigin="anonymous"></script>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap‌​.min.js"></script>
     <script>
         // Conexión con el socket server
         const socket = io('https://reactsocketapp.herokuapp.com/');
@@ -31,5 +28,10 @@
 
     </script>
     
+1
+2
+3    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.js" integrity="sha512-vGcPDqyonHb0c11UofnOKdSAt5zYRpKI4ow+v6hat4i96b7nHSn8PQyk0sT5L9RECyksp+SztCPP6bqeeGaRKg==" crossorigin="anonymous"></script>
+
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
