--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,6 @@
 2
 3    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.js" integrity="sha512-vGcPDqyonHb0c11UofnOKdSAt5zYRpKI4ow+v6hat4i96b7nHSn8PQyk0sT5L9RECyksp+SztCPP6bqeeGaRKg==" crossorigin="anonymous"></script>
 
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js" type="js"></script>
 </body>
 </html>
